syntax = "proto3";

package protobuf;

import "google/rpc/status.proto";

option go_package = "pkg/api";


message Block {
    string hash = 1;
    string prevHash = 2;
    string minerId = 3;
    repeated Op ops = 4;
    uint32 nounce = 5;
    repeated Block children = 6;
}

message Op {
    string op_id = 1;
    string miner_id = 2;
    OpAction op_action = 3;
    string file_name = 4;
    bytes bytes = 5;

    enum OpAction {
        UNKNOWN = 0;
        CREATE = 1;
        APPEND = 2;
    }
}

message FloodBlockRequest {
    string request_id = 1;
    repeated string previous_receivers = 2;
    Block block = 3;
    string minerID = 4; // the miner who sends this request
    string address = 5; // address of the miner who sends this request
}

message FloodChainRequest {
    string request_id = 1;
    repeated string previous_receivers = 2;
    Block chain = 3;
    string minerID = 4; // the miner who sends this request
    string address = 5; // address of the miner who sends this request
}

message FloodOpRequest {
    string request_id = 1;
    repeated string previous_receivers = 2;
    Op op = 3;
    string minerID = 4; // the miner who sends this request
    string address = 5; // address of the miner who sends this request
}

message FloodResponse {
    string request_id = 1;
}

message HeartBeatRequest {
    string fromMiner = 1;
    string toMiner = 2;
}
message HeartBeatResponse {
    string fromMiner = 1;
    string toMiner = 2;
}

// service for miner peer communication
service Peer {
    rpc FloodBlock (stream FloodBlockRequest) returns (stream FloodResponse) {}
    rpc FloodChain (stream FloodChainRequest) returns (stream FloodResponse) {}
    rpc FloodOp (stream FloodOpRequest) returns (stream FloodResponse) {}
    rpc HeartBeat(HeartBeatRequest) returns (HeartBeatResponse) {}
}
